syntax = "proto3";

option go_package = "services/proto";

message CreateUserRequest {
  string handle = 1;
  string password = 2;
  string display_name = 3;
  string bio = 4;
}

message CreateUserResponse {
  enum ResultType {
    OK    = 0;
    ERROR = 1;
  }

  ResultType result_type = 1;
  string error = 2;

  // global id of created user
  int64 global_id = 3;
}

message LoginRequest {
  string handle = 1;
  string password = 2;
}

message LoginResponse {
  enum ResultType {
    ACCEPTED = 0;
    DENIED   = 1;
    ERROR    = 2;
  }

  ResultType result = 1;
  string error = 2;
  // These fields are set if the result is ACCEPTED
  string display_name = 3;
  int64 global_id = 4;
}

message UpdateUserRequest {
  // If the user wants to change anything about their account, we'll check
  // their password again.
  string handle = 1;
  string current_password = 2;
  string new_password = 3;
  string display_name = 4;
  string bio = 5;
  bool private = 6;
  string post_title_css = 7;
  string post_body_css = 8;
}

message UpdateUserResponse {
  enum ResultType {
    ACCEPTED = 0;
    DENIED   = 1;
    ERROR    = 2;
  }

  ResultType result = 1;
  string error = 2;
  // This fields are set if the result is ACCEPTED
  string display_name = 3;
}

service Users {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Create(CreateUserRequest) returns (CreateUserResponse);
  rpc Update(UpdateUserRequest) returns (UpdateUserResponse);
}
